traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:18: error: '(' expected but identifier found.
  if !fini() {
     ^TraversalDiagonal:30: error: illegal start of simple expression
}
^